--- a/DungeonAverage.html
+++ b/DungeonAverage.html
@@ -710,39 +710,40 @@ const lootTables = {
     { name: '/items/dodocamel_gauntlets', probability: 0.15, min: 1, max: 1 },
     { name: '/items/griffin_bulwark', probability: 0.05, min: 1, max: 1 }
   ],
-  /*
+  
   'D2': [ // Sinister Chest
-    { name: 'Sinister Essence', probability: 100.0, min: 400, max: 800 },
-    { name: 'Sinister Essence', probability: 5.0, min: 2000, max: 4000 },
+    { name: '/items/sinister_essence', probability: 100.0, min: 400, max: 800 },
+    { name: '/items/sinister_essence', probability: 5.0, min: 2000, max: 4000 },
     { name: 'Sinister Token', probability: 100.0, min: 250, max: 500 },
     { name: 'Sinister Token', probability: 5.0, min: 1500, max: 3000 },
     { name: 'Large Treasure Chest', probability: 30.0, min: 1, max: 6 },
-    { name: 'Garnet', probability: 60.0, min: 5, max: 20 },
-    { name: 'Sunstone', probability: 50.0, min: 1, max: 3 },
-    { name: 'Penetrating Strike', probability: 50.0, min: 1, max: 2 },
-    { name: 'Pestilent Shot', probability: 50.0, min: 1, max: 2 },
-    { name: 'Smoke Burst', probability: 50.0, min: 1, max: 2 },
-    { name: "Acrobat's Ribbon", probability: 4.0, min: 1, max: 1 },
-    { name: "Magician's Cloth", probability: 4.0, min: 1, max: 1 },
-    { name: 'Chaotic Chain', probability: 2.0, min: 1, max: 1 },
-    { name: 'Sinister Chest Key', probability: 2.0, min: 1, max: 1 },
+    { name: '/items/garnet', probability: 60.0, min: 5, max: 20 },
+    { name: '/items/sunstone', probability: 50.0, min: 1, max: 3 },
+    { name: '/items/penetrating_strike', probability: 50.0, min: 1, max: 2 },
+    { name: '/items/pestilent_shot', probability: 50.0, min: 1, max: 2 },
+    { name: '/items/smoke_burst', probability: 50.0, min: 1, max: 2 },
+    { name: "/items/acrobats_ribbon", probability: 4.0, min: 1, max: 1 },
+    { name: "/items/magicians_cloth", probability: 4.0, min: 1, max: 1 },
+    { name: '/items/chaotic_chain', probability: 2.0, min: 1, max: 1 },
+    { name: '/items/sinister_chest_key', probability: 2.0, min: 1, max: 1 },
     { name: 'Sinister Cape', probability: 4.0, min: 1, max: 1 },
-    { name: 'Acrobatic Hood', probability: 0.2, min: 1, max: 1 },
-    { name: "Magician's Hat", probability: 0.2, min: 1, max: 1 },
-    { name: 'Chaotic Flail', probability: 0.05, min: 1, max: 1 },
-    { name: 'Cursed Bow', probability: 0.05, min: 1, max: 1 }
+    { name: '/items/acrobatic_hood', probability: 0.2, min: 1, max: 1 },
+    { name: "/items/magicians_hat", probability: 0.2, min: 1, max: 1 },
+    { name: '/items/chaotic_flail', probability: 0.05, min: 1, max: 1 },
+    { name: '/items/cursed_bow', probability: 0.05, min: 1, max: 1 }
   ],
+  /*
   'D3': [ // Enchanted Chest
-    { name: 'Enchanted Essence', probability: 100, min: 400, max: 800 },
-    { name: 'Enchanted Essence', probability: 5.0, min: 2000, max: 4000 },
+    { name: '/items/enchanted_essence', probability: 100, min: 400, max: 800 },
+    { name: '/items/enchanted_essence', probability: 5.0, min: 2000, max: 4000 },
     { name: 'Enchanted Token', probability: 100, min: 250, max: 500 },
     { name: 'Enchanted Token', probability: 5.0, min: 1500, max: 3000 },
     { name: 'Large Treasure Chest', probability: 30.0, min: 1, max: 7 },
-    { name: 'Amethyst', probability: 60.0, min: 5, max: 20 },
-    { name: 'Sunstone', probability: 50.0, min: 1, max: 5 },
-    { name: 'Crippling Slash', probability: 50.0, min: 1, max: 2 },
-    { name: 'Penetrating Shot', probability: 50.0, min: 1, max: 2 },
-    { name: 'Arcane Reflection', probability: 50.0, min: 1, max: 2 },
+    { name: '/items/amethyst', probability: 60.0, min: 5, max: 20 },
+    { name: '/items/sunstone', probability: 50.0, min: 1, max: 5 },
+    { name: '/items/crippling_slash', probability: 50.0, min: 1, max: 2 },
+    { name: '/items/penetrating_shot', probability: 50.0, min: 1, max: 2 },
+    { name: '/items/arcane_reflection', probability: 50.0, min: 1, max: 2 },
     { name: 'Mana Spring', probability: 50.0, min: 1, max: 2 },
     { name: "Knight's Ingot", probability: 4.0, min: 1, max: 1 },
     { name: "Bishop's Scroll", probability: 4.0, min: 1, max: 1 },
