--- a/DungeonAverage.html
+++ b/DungeonAverage.html
@@ -732,7 +732,6 @@ const lootTables = {
     { name: '/items/chaotic_flail', probability: 0.05, min: 1, max: 1 },
     { name: '/items/cursed_bow', probability: 0.05, min: 1, max: 1 }
   ],
-  /*
   'D3': [ // Enchanted Chest
     { name: '/items/enchanted_essence', probability: 100, min: 400, max: 800 },
     { name: '/items/enchanted_essence', probability: 5.0, min: 2000, max: 4000 },
@@ -744,25 +743,26 @@ const lootTables = {
     { name: '/items/crippling_slash', probability: 50.0, min: 1, max: 2 },
     { name: '/items/penetrating_shot', probability: 50.0, min: 1, max: 2 },
     { name: '/items/arcane_reflection', probability: 50.0, min: 1, max: 2 },
-    { name: 'Mana Spring', probability: 50.0, min: 1, max: 2 },
-    { name: "Knight's Ingot", probability: 4.0, min: 1, max: 1 },
-    { name: "Bishop's Scroll", probability: 4.0, min: 1, max: 1 },
-    { name: 'Royal Cloth', probability: 4.0, min: 1, max: 1 },
-    { name: 'Regal Jewel', probability: 2.0, min: 1, max: 1 },
-    { name: 'Sundering Jewel', probability: 2.0, min: 1, max: 1 },
-    { name: 'Enchanted Chest Key', probability: 2.0, min: 1, max: 1 },
+    { name: '/items/mana_spring', probability: 50.0, min: 1, max: 2 },
+    { name: "/items/knights_ingot", probability: 4.0, min: 1, max: 1 },
+    { name: "/items/bishops_scroll", probability: 4.0, min: 1, max: 1 },
+    { name: '/items/royal_cloth', probability: 4.0, min: 1, max: 1 },
+    { name: '/items/regal_jewel', probability: 2.0, min: 1, max: 1 },
+    { name: '/items/sundering_jewel', probability: 2.0, min: 1, max: 1 },
+    { name: '/items/enchanted_chest_key', probability: 2.0, min: 1, max: 1 },
     { name: 'Enchanted Cloak', probability: 4.0, min: 1, max: 1 },
-    { name: "Knight's Aegis", probability: 0.2, min: 1, max: 1 },
-    { name: "Bishop's Codex", probability: 0.2, min: 1, max: 1 },
-    { name: 'Royal Water Robe Top', probability: 0.04, min: 1, max: 1 },
-    { name: 'Royal Water Robe Bottoms', probability: 0.04, min: 1, max: 1 },
-    { name: 'Royal Nature Robe Top', probability: 0.04, min: 1, max: 1 },
-    { name: 'Royal Nature Robe Bottoms', probability: 0.04, min: 1, max: 1 },
-    { name: 'Royal Fire Robe Top', probability: 0.04, min: 1, max: 1 },
-    { name: 'Royal Fire Robe Bottoms', probability: 0.04, min: 1, max: 1 },
-    { name: 'Regal Sword', probability: 0.05, min: 1, max: 1 },
-    { name: 'Sundering Crossbow', probability: 0.05, min: 1, max: 1 }
+    { name: "/items/knights_aegis", probability: 0.2, min: 1, max: 1 },
+    { name: "/items/bishops_codex", probability: 0.2, min: 1, max: 1 },
+    { name: '/items/royal_water_robe_top', probability: 0.04, min: 1, max: 1 },
+    { name: '/items/royal_water_robe_bottoms', probability: 0.04, min: 1, max: 1 },
+    { name: '/items/royal_nature_robe_top', probability: 0.04, min: 1, max: 1 },
+    { name: '/items/royal_nature_robe_bottoms', probability: 0.04, min: 1, max: 1 },
+    { name: '/items/royal_fire_robe_top', probability: 0.04, min: 1, max: 1 },
+    { name: '/items/royal_fire_robe_bottoms', probability: 0.04, min: 1, max: 1 },
+    { name: '/items/regal_sword', probability: 0.05, min: 1, max: 1 },
+    { name: '/items/sundering_crossbow', probability: 0.05, min: 1, max: 1 }
   ],
+  /*
   'D4': [ // Pirate Chest
     { name: 'Pirate Essence', probability: 100.0, min: 400, max: 800 },
     { name: 'Pirate Essence', probability: 5.0, min: 2000, max: 4000 },
