--- a/DungeonAverage.html
+++ b/DungeonAverage.html
@@ -762,38 +762,36 @@ const lootTables = {
     { name: '/items/regal_sword', probability: 0.05, min: 1, max: 1 },
     { name: '/items/sundering_crossbow', probability: 0.05, min: 1, max: 1 }
   ],
-  /*
   'D4': [ // Pirate Chest
-    { name: 'Pirate Essence', probability: 100.0, min: 400, max: 800 },
-    { name: 'Pirate Essence', probability: 5.0, min: 2000, max: 4000 },
+    { name: '/items/pirate_essence', probability: 100.0, min: 400, max: 800 },
+    { name: '/items/pirate_essence', probability: 5.0, min: 2000, max: 4000 },
     { name: 'Pirate Token', probability: 100.0, min: 250, max: 500 },
     { name: 'Pirate Token', probability: 5.0, min: 1500, max: 3000 },
     { name: 'Large Treasure Chest', probability: 30.0, min: 1, max: 8 },
-    { name: 'Moonstone', probability: 50.0, min: 5, max: 20 },
-    { name: 'Sunstone', probability: 50.0, min: 1, max: 6 },
-    { name: 'Shield Bash', probability: 50.0, min: 1, max: 2 },
-    { name: 'Fracturing Impact', probability: 50.0, min: 1, max: 2 },
-    { name: 'Life Drain', probability: 50.0, min: 1, max: 2 },
-    { name: 'Marksman Brooch', probability: 3.0, min: 1, max: 1 },
-    { name: 'Corsair Crest', probability: 3.0, min: 1, max: 1 },
-    { name: 'Damaged Anchor', probability: 3.0, min: 1, max: 1 },
-    { name: 'Maelstrom Plating', probability: 3.0, min: 1, max: 1 },
-    { name: 'Kraken Leather', probability: 3.0, min: 1, max: 1 },
-    { name: 'Kraken Fang', probability: 3.0, min: 1, max: 1 },
-    { name: 'Pirate Chest Key', probability: 2.0, min: 1, max: 1 },
-    { name: 'Marksman Bracers', probability: 0.2, min: 1, max: 1 },
-    { name: 'Corsair Helmet', probability: 0.2, min: 1, max: 1 },
-    { name: 'Anchorbound Plate Body', probability: 0.04, min: 1, max: 1 },
-    { name: 'Anchorbound Plate Legs', probability: 0.04, min: 1, max: 1 },
-    { name: 'Maelstrom Plate Body', probability: 0.04, min: 1, max: 1 },
-    { name: 'Maelstrom Plate Legs', probability: 0.04, min: 1, max: 1 },
-    { name: 'Kraken Tunic', probability: 0.04, min: 1, max: 1 },
-    { name: 'Kraken Chaps', probability: 0.04, min: 1, max: 1 },
-    { name: 'Rippling Trident', probability: 0.03, min: 1, max: 1 },
-    { name: 'Blooming Trident', probability: 0.03, min: 1, max: 1 },
-    { name: 'Blazing Trident', probability: 0.03, min: 1, max: 1 }
+    { name: '/items/moonstone', probability: 50.0, min: 5, max: 20 },
+    { name: '/items/sunstone', probability: 50.0, min: 1, max: 6 },
+    { name: '/items/shield_bash', probability: 50.0, min: 1, max: 2 },
+    { name: '/items/fracturing_impact', probability: 50.0, min: 1, max: 2 },
+    { name: '/items/life_drain', probability: 50.0, min: 1, max: 2 },
+    { name: '/items/marksman_brooch', probability: 3.0, min: 1, max: 1 },
+    { name: '/items/corsair_crest', probability: 3.0, min: 1, max: 1 },
+    { name: '/items/damaged_anchor', probability: 3.0, min: 1, max: 1 },
+    { name: '/items/maelstrom_plating', probability: 3.0, min: 1, max: 1 },
+    { name: '/items/kraken_leather', probability: 3.0, min: 1, max: 1 },
+    { name: '/items/kraken_fang', probability: 3.0, min: 1, max: 1 },
+    { name: '/items/pirate_chest_key', probability: 2.0, min: 1, max: 1 },
+    { name: '/items/marksman_bracers', probability: 0.2, min: 1, max: 1 },
+    { name: '/items/corsair_helmet', probability: 0.2, min: 1, max: 1 },
+    { name: '/items/anchorbound_plate_body', probability: 0.04, min: 1, max: 1 },
+    { name: '/items/anchorbound_plate_legs', probability: 0.04, min: 1, max: 1 },
+    { name: '/items/maelstrom_plate_body', probability: 0.04, min: 1, max: 1 },
+    { name: '/items/maelstrom_plate_legs', probability: 0.04, min: 1, max: 1 },
+    { name: '/items/kraken_tunic', probability: 0.04, min: 1, max: 1 },
+    { name: '/items/kraken_chaps', probability: 0.04, min: 1, max: 1 },
+    { name: '/items/rippling_trident', probability: 0.03, min: 1, max: 1 },
+    { name: '/items/blooming_trident', probability: 0.03, min: 1, max: 1 },
+    { name: '/items/blazing_trident', probability: 0.03, min: 1, max: 1 }
   ],
-  */
   'LargeTreasureChest': [
     { name: 'Coin', probability: 100, min: 30000, max: 60000 },
     { name: 'Coin', probability: 10.0, min: 150000, max: 300000 },
