--- a/dungeon.html
+++ b/dungeon.html
@@ -299,7 +299,7 @@ function setupCollapsibles() {
 fetchData();
 </script>
 #NerfStack
-   - Updated to new api by hypnoshh
+   - Updated to new api by Physon
 </body>
 </html>
 
