fix for retribution as d3 drop

--- a/DungeonAverage.html
+++ b/DungeonAverage.html
@@ -742,7 +742,7 @@ const lootTables = {
     { name: '/items/sunstone', probability: 50.0, min: 1, max: 5 },
     { name: '/items/crippling_slash', probability: 50.0, min: 1, max: 2 },
     { name: '/items/penetrating_shot', probability: 50.0, min: 1, max: 2 },
-    { name: '/items/arcane_reflection', probability: 50.0, min: 1, max: 2 },
+    { name: '/items/retribution', probability: 50.0, min: 1, max: 2 },
     { name: '/items/mana_spring', probability: 50.0, min: 1, max: 2 },
     { name: "/items/knights_ingot", probability: 4.0, min: 1, max: 1 },
     { name: "/items/bishops_scroll", probability: 4.0, min: 1, max: 1 },
