added furious spear as drop for d3

--- a/DungeonAverage.html
+++ b/DungeonAverage.html
@@ -764,8 +764,9 @@ const lootTables = {
     { name: '/items/royal_nature_robe_bottoms', probability: 0.04, min: 1, max: 1 },
     { name: '/items/royal_fire_robe_top', probability: 0.04, min: 1, max: 1 },
     { name: '/items/royal_fire_robe_bottoms', probability: 0.04, min: 1, max: 1 },
-    { name: '/items/regal_sword', probability: 0.05, min: 1, max: 1 },
-    { name: '/items/sundering_crossbow', probability: 0.05, min: 1, max: 1 }
+    { name: '/items/furious_spear', probability: 0.03, min: 1, max: 1 },
+    { name: '/items/regal_sword', probability: 0.03, min: 1, max: 1 },
+    { name: '/items/sundering_crossbow', probability: 0.03, min: 1, max: 1 }
   ],
   'D4': [ // Pirate Chest
     { name: '/items/pirate_essence', probability: 100.0, min: 400, max: 800 },
