--- a/DungeonAverage.html
+++ b/DungeonAverage.html
@@ -825,8 +825,11 @@ const lootTables = {
   ]
 };
 </script>
-Bagz ❤️ Goats
-  Updated to new API by - Physon
+<p>
+Fork by Physon<br>
+Big thanks and love to to: Metzil, Lurpa, miku, Joethedestroyer<br>
+Originally by <a href="https://github.com/GoldenHoundGit/sunstone">GoldenHound</a><br>
+</p>
 </body>
 </html>
 
