--- a/DungeonAverage.html
+++ b/DungeonAverage.html
@@ -434,10 +434,10 @@ async function fetchData() {
   const includeKeys = document.getElementById('include-keys').checked;
 
   const keyItems = {
-    'D1': ['/items/chimerical_chest_key'],
-    'D2': ['/items/sinister_chest_key'],
-    'D3': ['/items/enchanted_chest_key'],
-    'D4': ['/items/pirate_chest_key'],
+    'D1': ['/items/chimerical_chest_key', '/items/chimerical_entry_key'],
+    'D2': ['/items/sinister_chest_key', '/items/sinister_entry_key'],
+    'D3': ['/items/enchanted_chest_key', '/items/enchanted_entry_key'],
+    'D4': ['/items/pirate_chest_key', '/items/pirate_entry_key'],
     'D1 Refinement Chest': ['/items/chimerical_chest_key'],
     'D2 Refinement Chest': ['/items/sinister_chest_key'],
     'D3 Refinement Chest': ['/items/enchanted_chest_key'],
