--- a/DungeonAveragetest.html
+++ b/DungeonAveragetest.html
@@ -743,11 +743,11 @@ const lootTables = {
     { name: '/items/cursed_bow', probability: 0.05, min: 1, max: 1 }
   ],
   'D3': [ // Enchanted Chest
-    { name: '/items/enchanted_essence', probability: 100, min: 400, max: 800 },
-    { name: '/items/enchanted_essence', probability: 5.0, min: 2000, max: 4000 },
-    { name: 'Enchanted Token', probability: 100, min: 250, max: 500 },
-    { name: 'Enchanted Token', probability: 5.0, min: 1500, max: 3000 },
-    { name: 'Large Treasure Chest', probability: 30.0, min: 1, max: 7 },
+  //  { name: '/items/enchanted_essence', probability: 100, min: 400, max: 800 },
+  //  { name: '/items/enchanted_essence', probability: 5.0, min: 2000, max: 4000 },
+  //  { name: 'Enchanted Token', probability: 100, min: 250, max: 500 },
+  //  { name: 'Enchanted Token', probability: 5.0, min: 1500, max: 3000 },
+  //  { name: 'Large Treasure Chest', probability: 30.0, min: 1, max: 7 },
     { name: '/items/amethyst', probability: 60.0, min: 5, max: 20 },
     { name: '/items/sunstone', probability: 50.0, min: 1, max: 5 },
     { name: '/items/crippling_slash', probability: 50.0, min: 1, max: 2 },
