--- a/DungeonAverage.html
+++ b/DungeonAverage.html
@@ -444,10 +444,11 @@ async function fetchData() {
     'D4 Refinement Chest': ['/items/pirate_chest_key']
 
   };
-
+  let largechest = 0;
   for (const dungeon in lootTables) {
     let averageValue = 0;
     let hasData = false;
+    
     const missingAskItems = [];
     const ignoreList = ['Token', 'Treasure', 'Coin', 'Cape', 'Quiver', 'Cloak'];
     const loot = lootTables[dungeon];
@@ -474,7 +475,9 @@ async function fetchData() {
       }
 
       //TODO Add another if(drop.name.includes('Large Treasure Chest')) and add math to add that value - physon
-
+      if(drop.name.includes('Large Treasure Chest')){
+        price = largechest;
+      }
 
       //  If it's a Token, adjust price to be based on best money/token value
       if (drop.name.includes('Token')) {
@@ -565,6 +568,9 @@ async function fetchData() {
 
       avgHtml += `<tr><td>${dungeon}</td><td>${avgValueFormatted}${keyCostText}</td><td>${formattedProfitHour}</td><td>${formattedProfitDay}</td></tr>`;
 
+    if(dungeon === 'Large Treasure Chest'){
+      largechest = averageValue;
+    }
   }
 
   avgHtml += '</tbody>';
@@ -696,12 +702,21 @@ const dungeons = {
 
 
 const lootTables = {
+  'Large Treasure Chest': [
+    { name: 'Coin', probability: 100, min: 30000, max: 60000  },
+    { name: 'Coin', probability: 10.0, min: 150000, max: 300000  },
+    { name: '/items/pearl', probability: 60.0, min: 1, max: 3 },
+    { name: '/items/amber', probability: 40.0, min: 1, max: 3 },
+    { name: '/items/garnet', probability: 40.0, min: 1, max: 3 },
+    { name: '/items/jade', probability: 40.0, min: 1, max: 3 },
+    { name: '/items/moonstone', probability: 40.0, min: 1, max: 2 }
+  ],
   'D1': [ // Chimerical Chest
     { name: '/items/chimerical_essence', probability: 100, min: 400, max: 800 },
     { name: '/items/chimerical_essence', probability: 5.0, min: 2000, max: 4000 },
     { name: 'Chimerical Token', probability: 100, min: 250, max: 500 },
     { name: 'Chimerical Token', probability: 5.0, min: 1500, max: 3000 },
-    { name: 'Large Treasure Chest', probability: 30.0, min: 1, max: 5 },
+   { name: 'Large Treasure Chest', probability: 30.0, min: 1, max: 5 },
     { name: '/items/jade', probability: 60.0, min: 5, max: 20 },
     { name: '/items/sunstone', probability: 50.0, min: 1, max: 1 },
     { name: '/items/crippling_slash', probability: 50.0, min: 1, max: 2 },
@@ -778,7 +793,7 @@ const lootTables = {
     { name: '/items/pirate_essence', probability: 5.0, min: 2000, max: 4000 },
     { name: 'Pirate Token', probability: 100.0, min: 250, max: 500 },
     { name: 'Pirate Token', probability: 5.0, min: 1500, max: 3000 },
-    { name: 'Large Treasure Chest', probability: 30.0, min: 1, max: 8 },
+    { name: 'Large Treasfure Chest', probability: 30.0, min: 1, max: 8 },
     { name: '/items/moonstone', probability: 50.0, min: 5, max: 20 },
     { name: '/items/sunstone', probability: 50.0, min: 1, max: 6 },
     { name: '/items/shield_bash', probability: 50.0, min: 1, max: 2 },
@@ -803,15 +818,7 @@ const lootTables = {
     { name: '/items/blooming_trident', probability: 0.03, min: 1, max: 1 },
     { name: '/items/blazing_trident', probability: 0.03, min: 1, max: 1 }
   ],
-  // 'Large Treasure Chest': [
-  //   { name: 'Coin', probability: 100, min: 30000, max: 60000  },
-  //   { name: 'Coin', probability: 10.0, min: 150000, max: 300000  },
-  //   { name: '/items/pearl', probability: 60.0, min: 1, max: 3 },
-  //   { name: '/items/amber', probability: 40.0, min: 1, max: 3 },
-  //   { name: '/items/garnet', probability: 40.0, min: 1, max: 3 },
-  //   { name: '/items/jade', probability: 40.0, min: 1, max: 3 },
-  //   { name: '/items/moonstone', probability: 40.0, min: 1, max: 2 }
-  // ],
+
   'D1 Refinement Chest': [
     { name: '/items/chimerical_refinement_shard', probability: 100, min: 1, max: 2 },
     { name: '/items/chimerical_refinement_shard', probability: 5.0, min: 5, max: 10 }
