--- a/DungeonAverage.html
+++ b/DungeonAverage.html
@@ -709,6 +709,7 @@ const lootTables = {
     { name: '/items/amber', probability: 40.0, min: 1, max: 3 },
     { name: '/items/garnet', probability: 40.0, min: 1, max: 3 },
     { name: '/items/jade', probability: 40.0, min: 1, max: 3 },
+    { name: '/items/amethyst', probability: 40.0, min: 1, max: 3 },
     { name: '/items/moonstone', probability: 40.0, min: 1, max: 2 }
   ],
   'D1': [ // Chimerical Chest
