--- a/DungeonAverage.html
+++ b/DungeonAverage.html
@@ -469,15 +469,14 @@ async function fetchData() {
       } else {
         if (drop.name === 'Coin') {
           price = 1; // ✅ Coins are always worth 1
+        }else if(drop.name.includes('Large Treasure Chest')){
+          price = largechest;
         } else {
           price = useBidOnly ? (marketItem.b ?? 0) : Math.max(marketItem.a ?? 0, marketItem.b ?? 0);
         }
       }
 
-      //TODO Add another if(drop.name.includes('Large Treasure Chest')) and add math to add that value - physon
-      if(drop.name.includes('Large Treasure Chest')){
-        price = largechest;
-      }
+
 
       //  If it's a Token, adjust price to be based on best money/token value
       if (drop.name.includes('Token')) {
