fixed D4 typo on Large Chest

--- a/DungeonAverage.html
+++ b/DungeonAverage.html
@@ -793,7 +793,7 @@ const lootTables = {
     { name: '/items/pirate_essence', probability: 5.0, min: 2000, max: 4000 },
     { name: 'Pirate Token', probability: 100.0, min: 250, max: 500 },
     { name: 'Pirate Token', probability: 5.0, min: 1500, max: 3000 },
-    { name: 'Large Treasfure Chest', probability: 30.0, min: 1, max: 8 },
+    { name: 'Large Treasure Chest', probability: 30.0, min: 1, max: 8 },
     { name: '/items/moonstone', probability: 50.0, min: 5, max: 20 },
     { name: '/items/sunstone', probability: 50.0, min: 1, max: 6 },
     { name: '/items/shield_bash', probability: 50.0, min: 1, max: 2 },
